--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-icons": "^4.8.0",
     "react-select": "^5.7.3",
     "sharp": "^0.32.1",
+    "stripe": "^12.7.0",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
