--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
     "aws-sdk": "^2.1383.0",
+    "bcrypt": "^5.1.0",
     "cookie": "^0.5.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.12.16",
     "jose": "^4.14.4",
+    "jsonwebtoken": "^9.0.0",
     "nanoid": "^4.0.2",
     "next": "^13.4.1",
     "react": "18.2.0",
@@ -37,11 +39,14 @@
     "sharp": "^0.32.1",
     "stripe": "^12.7.0",
     "superjson": "1.12.2",
+    "turbo": "^1.9.9",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cookie": "^0.5.1",
     "@types/eslint": "^8.21.3",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.15.5",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
