--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
     "aws-sdk": "^2.1383.0",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cookie": "^0.5.0",
     "date-fns": "^2.30.0",
@@ -30,6 +31,7 @@
     "jsonwebtoken": "^9.0.0",
     "nanoid": "^4.0.2",
     "next": "^13.4.1",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-calendar": "^4.2.1",
     "react-dom": "18.2.0",
